fixing centering on small sizes

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -37,6 +37,7 @@ a:visited {
 main {
   display: flex;
   flex-flow: column;
+  align-items: center;
 }
 
 header h1 {
@@ -52,7 +53,6 @@ main img {
 main h2 {
   z-index: 2;
   margin: 0;
-  align-self: end;
 }
 
 main article {
@@ -101,6 +101,7 @@ article section {
     main h2 {
       grid-column: 2 / 4;
       grid-row: 2 / 3;
+      align-self: end;
     }
 
     main article {
